--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
 <body>
         <!-- header section - START -->
         <header>
-            header here
             <!-- logo -->
+            <div class="logo">
+                <img src="media/images/ic-logo.svg" alt="Colmar Academy Logo">
+                <div class="logo_txt_colmar">COLMAR</div>
+                <div class="logo_txt_academy">ACADEMY</div>
+            </div>
 
 
             <!-- menu -->
+            <nav>
+                <ul class="sitenav">
+                    <li><a href="#">On Campus</a></li>
+                    <li><a href="#">Online</a></li>
+                    <li><a href="#">For Your Companies</a></li>
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+            </nav>
 
             
         </header>
@@ -22,7 +34,6 @@
        
         <!-- main section - START -->
         <main>
-            content here
             <!-- top banner -->
 
             <!-- mid banner -->
