Add and amend to complete assessment 2

--- a/index.html
+++ b/index.html
@@ -11,137 +11,257 @@
 <body>
     <!-- header section - START -->
     <header>
+
         <!-- logo -->
         <div class="logo">
-            <img src="media/images/ic-logo.svg" alt="Colmar Academy Logo">
-            <div class="logo_txt_colmar">COLMAR</div>
-            <div class="logo_txt_academy">ACADEMY</div>
+            <img src="media/images/ic-logo.svg">
+            <div class="logo_colmar">COLMAR</div>
+            <div class="logo_academy">ACADEMY</div>
         </div>
 
-
         <!-- menu -->
-        <nav>
-            <ul class="sitenav">
+        <div class="menu">
+            <ul class="navbar">
                 <li><a href="#">On Campus</a></li>
                 <li><a href="#">Online</a></li>
                 <li><a href="#">For Your Companies</a></li>
                 <li><a href="#">Sign In</a></li>
             </ul>
-        </nav>
+        </div>
 
+        <!-- menu mobile -->
+        <nav class="menu_mobile">
+            <ul class="navbar">
+                <li><a href="index.html"><img src="media/images/ic-logo.svg" alt="Colmar Academy Logo"></a></li>
+                <li><a href="#"><img src="media/images/ic-on-campus.svg" alt="On Campus Icon"></a></li>
+                <li><a href="#"><img src="media/images/ic-online.svg" alt="Online Icon"></a></li>
+                <li><a href="#"><img src="media/images/ic-login.svg" alt="Login Icon"></a></li>
+            </ul>
+        </nav>
 
     </header>
     <!-- header section - END -->
 
-
     <!-- main section - START -->
     <main>
-        <!-- top banner -->
+
+        <!-- top banner -START -->
         <div class="topbanner">
-            <img src="media/images/banner.jpg" alt="Top banner shows 2 female students studying on a wooden desk">
+            <img src="media/images/banner.jpg">
             <div class="topbanner_text">
                 <h1>Learn something new everyday</h1>
-                <h2>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</h2>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
                 <button type="button">Start here</button>
             </div>
         </div>
+        <!-- top banner - END -->
 
-        <!-- mid banner -->
+        <!-- mid banner - START -->
         <div class="midbanner">
             <div class="midbanner_left">
-                <img src="media/images/information-main.jpg" alt="Image of Emanual reading a book at a park.">
-                <h1>It doesn't hurt to keep practicting</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eum necessitatibus sit. Animi id
-                    veritatis magnam doloribus nisi accusantium cumque rerum veniam dolores ab? Enim odit atque
-                    assumenda ut exercitationem?</p>
-                <p>Emanual, Snr Strategist at Hiring.com</p>
+                <img src="media/images/information-main.jpg">
+                <h1>It doesn't hurt to keep practicing</h1>
+                <p>Vivamus feugiat efficitur fermentum. Nunc eu quam sapien. Phasellus vestibulum ligula sit amet metus
+                    cursus sollicitudin.</p>
+                <p>Emanuel, Sr Strategist at Hiring.com</p>
             </div>
             <div class="midbanner_right">
                 <div class="orientation">
-                    <img src="media/images/information-orientation.jpg" alt="">
+                    <img src="media/images/information-orientation.jpg">
                     <div class="orientation_date">
-                        <h3>Orientation date</h3>
+                        <h2>Orientation Date</h2>
                         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                        <a class="readmore" href="#">Read More</a>
+                        <p class="read_more">Read more</p>
                     </div>
                 </div>
                 <div class="campus">
-                    <img src="media/images/information-campus.jpg" alt="">
+                    <img src="media/images/information-campus.jpg">
                     <div class="our_campus">
-                        <h3>Our Campus</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, facilis!</p>
-                        <a class="readmore" href="#">Read More</a>
+                        <h2>Our campus</h2>
+                        <p>Find which campus is close by you</p>
+                        <p class="read_more">Read more</p>
                     </div>
                 </div>
-                <div class="guest shade">
-                    <img src="media/images/information-guest-lecture.jpg" alt="">
+                <div class="guest">
+                    <img src="media/images/information-guest-lecture.jpg">
                     <div class="guest_lecture">
-                        <h3>Our Guest Lecture</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, facilis!</p>
-                        <a class="readmore" href="#">Read More</a>
+                        <h2>Our guest lecture</h2>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <p class="read_more">Read more</p>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- mid banner - END -->
 
-
-        <!-- mid banner -->
-
-
-
-        <!-- Start learning - START -->
-        <div class="midbanner_header">
-            <h2>Start Learning</h2>
-        </div>
-        <!-- Start learning - END -->
-
-        <!-- Thesis exhibit - START -->
-        <div class="midbanner_header">
-            <h2>Thesis exhibit</h2>
-        </div>
-
-        <div class="midbanner">
-            <div class="midbanner_left">
-                <video src="media/videos/thesis.mp4"></video>
-                <h2>Reimagine urban</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eum necessitatibus sit. Animi id
-                    veritatis magnam doloribus nisi accusantium cumque rerum veniam dolores ab? Enim odit atque
-                    assumenda ut exercitationem?</p>
-            </div>
-            <div class="midbanner_right_no_border">
-                <div class="fisma shade">
-                    <img src="media/images/thesis-fisma.jpg" alt="">
+        <!-- mid banner mobile - START -->
+        <div class="midbanner_mobile">
+            <div class="banner">
+                <div class="orientation">
+                    <img src="media/images/information-orientation-mobile.jpg">
                     <div class="orientation_date">
-                        <h3>Fisma: Design and Prototype</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        <h2>Orientation Date</h2>
+                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                        <p class="read_more"><a href="#">Read more</a></p>
                     </div>
                 </div>
-                <div class="now_then">
-                    <img src="media/images/thesis-now-and-then.jpg" alt="">
+                <div class="campus">
+                    <img src="media/images/information-campus-mobile.jpg">
                     <div class="our_campus">
-                        <h3>Now and then</h3>
-                        <p>Research study about New York</p>
+                        <h2>Our campus</h2>
+                        <p>Find which campus is close by you</p>
+                        <p class="read_more"><a href="#">Read more</a></p>
+                    </div>
+                </div>
+                <div class="guest">
+                    <img src="media/images/information-guest-lecture-mobile.jpg">
+                    <div class="guest_lecture">
+                        <h2>Our guest lecture</h2>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <p class="read_more"><a href="#">Read more</a></p>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Thesis exhibit - END -->
-        <!-- #TODO -->
+        <!-- mid banner mobile - END -->
+
+        <!-- bottom banner -->
+        <section class="bottombanner-wrap">
+        <div class="bottombanner">
+            <h1>Start learning</h1>
+            <ul class="start_learning">
+                <li class="software_engineering">
+                    <div class="crop">
+                        <img src="media/images/course-software.jpg">
+                    </div>
+                    <h3>Software engineering</h3>
+                    <p>COURSES</p>
+                    <p>Web Development, Mobile Development, iOT, APIs</p>
+                </li>
+                <li class="computer_art">
+                    <div class="crop">
+                        <img src="media/images/course-computer-art.jpg">
+                    </div>
+                    <h3>Computer art</h3>
+                    <p>COURSES</p>
+                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                </li>
+                <li class="design">
+                    <div class="crop">
+                        <img src="media/images/course-design.jpg">
+                    </div>
+                    <h3>Design</h3>
+                    <p>COURSES</p>
+                    <p>User Experience Design, User Research, Visual Design</p>
+                </li>
+            </ul>
+            <ul class="start_learning">
+                <li class="data">
+                    <div class="crop">
+                        <img src="media/images/course-data.jpg">
+                    </div>
+                    <h3>Data</h3>
+                    <p>COURSES</p>
+                    <p>Data Science, Big Data, SQL, Data Visualization</p>
+                </li>
+                <li class="business">
+                    <div class="crop">
+                        <img src="media/images/course-business.jpg">
+                    </div>
+                    <h3>Business</h3>
+                    <p>COURSES</p>
+                    <p>Product Development, Business Development, Startup</p>
+                </li>
+                <li class="marketing">
+                    <div class="crop">
+                        <img src="media/images/course-marketing.jpg">
+                    </div>
+                    <h3>Marketing</h3>
+                    <p>COURSES</p>
+                    <p>Analytics, Content Marketing, Mobile Marketing</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+        <!-- bottom banner - END -->
+
+        <!-- last banner START -->
+        <section class="lastbanner-wrap">
+            <div class="lastbanner_header">
+                <h2>Thesis exhibit</h2>
+            </div>
+
+            <div class="lastbanner">
+                <div class="lastbanner_left">
+                    <video src="media/videos/thesis.mp4"></video>
+                    <h2>Reimagine urban</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eum necessitatibus sit. Animi id
+                        veritatis magnam doloribus nisi accusantium cumque rerum veniam dolores ab? Enim odit atque
+                        assumenda ut exercitationem?</p>
+                </div>
+                <div class="lastbanner_right_no_border">
+                    <div class="fisma shade">
+                        <img src="media/images/thesis-fisma.jpg" alt="">
+                        <div class="orientation_date">
+                            <h3>Fisma: Design and Prototype</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                        </div>
+                    </div>
+                    <div class="now_then">
+                        <img src="media/images/thesis-now-and-then.jpg" alt="">
+                        <div class="our_campus">
+                            <h3>Now and then</h3>
+                            <p>Research study about New York</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- last banner END -->
+
+        <!-- mid banner mobile - START -->
+        <section class="bottombanner_mobile">
+            <h2 class="gray-bold-header">Start learning</h2>
+            <a class="no-decoration" href="#">
+                <div class="gray-background dark-grey-h3">Software engineering</div>
+            </a>
+            <a class="no-decoration" href="#">
+                <div class="gray-background dark-grey-h3">Computer art</div>
+            </a>
+            <a class="no-decoration" href="#">
+                <div class="gray-background dark-grey-h3">Design</div>
+            </a>
+            <a class="no-decoration" href="#">
+                <div class="gray-background dark-grey-h3">Data</div>
+            </a>
+            <a class="no-decoration" href="#">
+                <div class="gray-background dark-grey-h3">Business</div>
+            </a>
+            <a class="no-decoration" href="#">
+                <div class="gray-background dark-grey-h3">Marketing</div>
+            </a>
+        </section>
+        <!-- mid banner mobile - END -->
+
+        <!-- last banner mobile - START -->
+        <section class="lastbanner_mobile">
+            <h2 class="gray-bold-header">Thesis exhibits</h2>
+            <figure class="full-width-container">
+                <video src="/week3htmlcss/media/videos/thesis.mp4">Your browser do not support video</video>
+            </figure>
+        </section>
+        <!-- last banner mobile - END -->
 
     </main>
     <!-- main section - END -->
 
-    <!-- bottom, video and footer -->
-
     <!-- footer section - START -->
     <footer>
-        <!-- #TODO -->
-        <p>&copy 2016 Colmar Academy. All rights reserved</p>
-        <ul class="sitenav right_24">
+        <div class="copyright">&copy; 2016 Colmar Academy. All rights reserved</div>
+        <ul class="policies">
             <li><a href="#">Terms</a></li>
             <li><a href="#">Privacy</a></li>
         </ul>
-
     </footer>
     <!-- footer ction - END -->
 </body>
