Update title, favicon and fix video link

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Colman Academy</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="shortcut icon" type="image/svg" href="media/images/ic-logo.svg" />
+    <link rel="icon" type="image/x-icon" href="/media/images/ic-logo.svg">
 </head>
 
 <body>
@@ -247,7 +248,7 @@
         <section class="lastbanner_mobile">
             <h2 class="gray-bold-header">Thesis exhibits</h2>
             <figure class="full-width-container">
-                <video src="/week3htmlcss/media/videos/thesis.mp4">Your browser do not support video</video>
+                <video src="/media/videos/thesis.mp4">Your browser do not support video</video>
             </figure>
         </section>
         <!-- last banner mobile - END -->
