Add controls to video to fix not playing

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
             <div class="lastbanner">
                 <div class="lastbanner_left">
-                    <video src="media/videos/thesis.mp4"></video>
+                    <video src="media/videos/thesis.mp4" controls>Your browser do not support video</video>
                     <h2>Reimagine urban</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eum necessitatibus sit. Animi id
                         veritatis magnam doloribus nisi accusantium cumque rerum veniam dolores ab? Enim odit atque
@@ -248,7 +248,7 @@
         <section class="lastbanner_mobile">
             <h2 class="gray-bold-header">Thesis exhibits</h2>
             <figure class="full-width-container">
-                <video src="/media/videos/thesis.mp4">Your browser do not support video</video>
+                <video src="/media/videos/thesis.mp4" controls>Your browser do not support video</video>
             </figure>
         </section>
         <!-- last banner mobile - END -->
