--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="orientation">
                     <img src="media/images/information-orientation.jpg">
                     <div class="orientation_date">
-                        <h2>Orientation Date</h2>
+                        <h2>Orientation date</h2>
                         <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
                         <p class="read_more">Read more</p>
                     </div>
