--- a/index.html
+++ b/index.html
@@ -1,270 +1,127 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colman Academy</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
-    <link rel="shortcut icon" type="image/svg" href="media/images/ic-logo.svg" />
-    <link rel="icon" type="image/x-icon" href="/media/images/ic-logo.svg">
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/styles.css">
 </head>
 
 <body>
-    <!-- header section - START -->
-    <header>
-
-        <!-- logo -->
-        <div class="logo">
-            <img src="media/images/ic-logo.svg">
-            <div class="logo_colmar">COLMAR</div>
-            <div class="logo_academy">ACADEMY</div>
-        </div>
-
-        <!-- menu -->
-        <div class="menu">
-            <ul class="navbar">
-                <li><a href="#">On Campus</a></li>
-                <li><a href="#">Online</a></li>
-                <li><a href="#">For Your Companies</a></li>
-                <li><a href="#">Sign In</a></li>
-            </ul>
-        </div>
-
-        <!-- menu mobile -->
-        <nav class="menu_mobile">
-            <ul class="navbar">
-                <li><a href="index.html"><img src="media/images/ic-logo.svg" alt="Colmar Academy Logo"></a></li>
-                <li><a href="#"><img src="media/images/ic-on-campus.svg" alt="On Campus Icon"></a></li>
-                <li><a href="#"><img src="media/images/ic-online.svg" alt="Online Icon"></a></li>
-                <li><a href="#"><img src="media/images/ic-login.svg" alt="Login Icon"></a></li>
-            </ul>
-        </nav>
-
-    </header>
-    <!-- header section - END -->
-
-    <!-- main section - START -->
-    <main>
-
-        <!-- top banner -START -->
-        <div class="topbanner">
-            <img src="media/images/banner.jpg">
-            <div class="topbanner_text">
-                <h1>Learn something new everyday</h1>
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
-                <button type="button">Start here</button>
+    <nav class="navbar navbar-expand-lg bg-primary p-2 text-dark bg-opacity-50">
+        <div class="container-fluid container-1200">
+            <a class="navbar-brand" href="index.html">Joshua Ho Gwok Hin</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse bg-info bg-opacity-20" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">JavaScript Game - Find the Hat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Frontend - Tutorials</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <!-- top banner - END -->
+    </nav>
 
-        <!-- mid banner - START -->
-        <div class="midbanner">
-            <div class="midbanner_left">
-                <img src="media/images/information-main.jpg">
-                <h1>It doesn't hurt to keep practicing</h1>
-                <p>Vivamus feugiat efficitur fermentum. Nunc eu quam sapien. Phasellus vestibulum ligula sit amet metus
-                    cursus sollicitudin.</p>
-                <p>Emanuel, Sr Strategist at Hiring.com</p>
+    <div class="container-fluid container-1200">
+
+        <div class="row">
+            <!-- <h5 class="mini-header text-center">JavaScript Game - Find your hat</h5> -->
+
+            <div class="col-sm-3">
+                Technical Specifications
             </div>
-            <div class="midbanner_right">
-                <div class="orientation">
-                    <img src="media/images/information-orientation.jpg">
-                    <div class="orientation_date">
-                        <h2>Orientation date</h2>
-                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                        <p class="read_more">Read more</p>
-                    </div>
-                </div>
-                <div class="campus">
-                    <img src="media/images/information-campus.jpg">
-                    <div class="our_campus">
-                        <h2>Our campus</h2>
-                        <p>Find which campus is close by you</p>
-                        <p class="read_more">Read more</p>
-                    </div>
-                </div>
-                <div class="guest">
-                    <img src="media/images/information-guest-lecture.jpg">
-                    <div class="guest_lecture">
-                        <h2>Our guest lecture</h2>
-                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                        <p class="read_more">Read more</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- mid banner - END -->
-
-        <!-- mid banner mobile - START -->
-        <div class="midbanner_mobile">
-            <div class="banner">
-                <div class="orientation">
-                    <img src="media/images/information-orientation-mobile.jpg">
-                    <div class="orientation_date">
-                        <h2>Orientation Date</h2>
-                        <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                        <p class="read_more"><a href="#">Read more</a></p>
-                    </div>
-                </div>
-                <div class="campus">
-                    <img src="media/images/information-campus-mobile.jpg">
-                    <div class="our_campus">
-                        <h2>Our campus</h2>
-                        <p>Find which campus is close by you</p>
-                        <p class="read_more"><a href="#">Read more</a></p>
-                    </div>
-                </div>
-                <div class="guest">
-                    <img src="media/images/information-guest-lecture-mobile.jpg">
-                    <div class="guest_lecture">
-                        <h2>Our guest lecture</h2>
-                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                        <p class="read_more"><a href="#">Read more</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- mid banner mobile - END -->
-
-        <!-- bottom banner -->
-        <section class="bottombanner-wrap">
-        <div class="bottombanner">
-            <h1>Start learning</h1>
-            <ul class="start_learning">
-                <li class="software_engineering">
-                    <div class="crop">
-                        <img src="media/images/course-software.jpg">
-                    </div>
-                    <h3>Software engineering</h3>
-                    <p>COURSES</p>
-                    <p>Web Development, Mobile Development, iOT, APIs</p>
-                </li>
-                <li class="computer_art">
-                    <div class="crop">
-                        <img src="media/images/course-computer-art.jpg">
-                    </div>
-                    <h3>Computer art</h3>
-                    <p>COURSES</p>
-                    <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-                </li>
-                <li class="design">
-                    <div class="crop">
-                        <img src="media/images/course-design.jpg">
-                    </div>
-                    <h3>Design</h3>
-                    <p>COURSES</p>
-                    <p>User Experience Design, User Research, Visual Design</p>
-                </li>
-            </ul>
-            <ul class="start_learning">
-                <li class="data">
-                    <div class="crop">
-                        <img src="media/images/course-data.jpg">
-                    </div>
-                    <h3>Data</h3>
-                    <p>COURSES</p>
-                    <p>Data Science, Big Data, SQL, Data Visualization</p>
-                </li>
-                <li class="business">
-                    <div class="crop">
-                        <img src="media/images/course-business.jpg">
-                    </div>
-                    <h3>Business</h3>
-                    <p>COURSES</p>
-                    <p>Product Development, Business Development, Startup</p>
-                </li>
-                <li class="marketing">
-                    <div class="crop">
-                        <img src="media/images/course-marketing.jpg">
-                    </div>
-                    <h3>Marketing</h3>
-                    <p>COURSES</p>
-                    <p>Analytics, Content Marketing, Mobile Marketing</p>
-                </li>
-            </ul>
-        </div>
-    </section>
-        <!-- bottom banner - END -->
-
-        <!-- last banner START -->
-        <section class="lastbanner-wrap">
-            <div class="lastbanner_header">
-                <h2>Thesis exhibit</h2>
-            </div>
-
-            <div class="lastbanner">
-                <div class="lastbanner_left">
-                    <video src="media/videos/thesis.mp4" controls>Your browser do not support video</video>
-                    <h2>Reimagine urban</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eum necessitatibus sit. Animi id
-                        veritatis magnam doloribus nisi accusantium cumque rerum veniam dolores ab? Enim odit atque
-                        assumenda ut exercitationem?</p>
-                </div>
-                <div class="lastbanner_right_no_border">
-                    <div class="fisma shade">
-                        <img src="media/images/thesis-fisma.jpg" alt="">
-                        <div class="orientation_date">
-                            <h3>Fisma: Design and Prototype</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <div class="col-sm-6">
+                <div class="game-console-top">
+                    <div class="row px-2 py-0">
+                        <div class="col-2 pt-2 pb-0">
+                            <img src="/images/find-the-hat/paw-print.png" class="w-100" alt="">
                         </div>
-                    </div>
-                    <div class="now_then">
-                        <img src="media/images/thesis-now-and-then.jpg" alt="">
-                        <div class="our_campus">
-                            <h3>Now and then</h3>
-                            <p>Research study about New York</p>
+                        <div class="col-8">
+                            <p class="h2 d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none pt-3 ">Find Your Hat</p>
+                            <p class="h3 d-none d-sm-block d-lg-none d-xl-none d-xxl-none pt-1"> Find Your Hat</p>
+                            <p class="h1 d-none d-lg-block pt-2">Find Your Hat</p>
+                        </div>
+                        <div class="col-2 pt-2 pb-0">
+                            <img src="/images/find-the-hat/hat.png" class="w-100" alt="">
                         </div>
                     </div>
                 </div>
+
+                <div id="game-field">
+
+                    <div class="my-flex-container" id="print-elements"></div>
+
+                    <div class="container-fluid">
+                        <div class="row">
+                            <table class="controller-table">
+                                <tr>
+                                    <td rowspan="2">
+                                        <div class="triangle-left"></div>
+                                    </td>
+                                    <td>
+                                        <div class="triangle-up"></div>
+                                        <span> </span>
+                                        <div class="triangle-down"></div>
+                                    </td>
+                                    <td rowspan="2">
+                                        <div class="triangle-right"></div>
+                                    </td>
+                                </tr>
+
+                            </table>
+                            controller buttons here
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="game-console-bottom">
+                    <div class="row px-2 py-0">
+                        <div class="col-1 pb-2 pt-0">
+                            <img src="/images/find-the-hat/paw-print.png" class="w-100" alt="">
+                        </div>
+                        <div class="col-10">
+                            <button class="h5 d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none pb-3 ">Reset
+                                Game</button>
+                            <button class="h6 d-none d-sm-block d-lg-none d-xl-none d-xxl-none pb-1">Reset Game</button>
+                            <button class="h4 d-none d-lg-block pb-2">Reset Game</button>
+                        </div>
+                        <div class="col-1 pb-2 pt-0">
+                            <img src="/images/find-the-hat/hat.png" class="w-100" alt="">
+                        </div>
+                    </div>
+                </div>
+
             </div>
-        </section>
-        <!-- last banner END -->
+            <div class="col">
+                Game instructions
+            </div>
 
-        <!-- mid banner mobile - START -->
-        <section class="bottombanner_mobile">
-            <h2 class="gray-bold-header">Start learning</h2>
-            <a class="no-decoration" href="#">
-                <div class="gray-background dark-grey-h3">Software engineering</div>
-            </a>
-            <a class="no-decoration" href="#">
-                <div class="gray-background dark-grey-h3">Computer art</div>
-            </a>
-            <a class="no-decoration" href="#">
-                <div class="gray-background dark-grey-h3">Design</div>
-            </a>
-            <a class="no-decoration" href="#">
-                <div class="gray-background dark-grey-h3">Data</div>
-            </a>
-            <a class="no-decoration" href="#">
-                <div class="gray-background dark-grey-h3">Business</div>
-            </a>
-            <a class="no-decoration" href="#">
-                <div class="gray-background dark-grey-h3">Marketing</div>
-            </a>
-        </section>
-        <!-- mid banner mobile - END -->
 
-        <!-- last banner mobile - START -->
-        <section class="lastbanner_mobile">
-            <h2 class="gray-bold-header">Thesis exhibits</h2>
-            <figure class="full-width-container">
-                <video src="/media/videos/thesis.mp4" controls>Your browser do not support video</video>
-            </figure>
-        </section>
-        <!-- last banner mobile - END -->
+            <div class="mini-footer"></div>
+        </div>
+    </div>
 
-    </main>
-    <!-- main section - END -->
-
-    <!-- footer section - START -->
-    <footer>
-        <div class="copyright">&copy; 2016 Colmar Academy. All rights reserved</div>
-        <ul class="policies">
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Privacy</a></li>
-        </ul>
-    </footer>
-    <!-- footer ction - END -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script src="/js/find-the-hat.js"></script>
 </body>
 
 </html>
