--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div class="row">
             <!-- <h5 class="mini-header text-center">JavaScript Game - Find your hat</h5> -->
 
-            <div class="col-sm-3">
+            <div class="col-sm-3 col-lg-4">
                 Technical Specifications
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-lg-5 col-xl-4">
                 <div class="game-console-top">
                     <div class="row px-2 py-0">
                         <div class="col-2 pt-2 pb-0">
@@ -54,8 +54,10 @@
                         </div>
                         <div class="col-8">
                             <p class="h2 d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none pt-3 ">Find Your Hat</p>
-                            <p class="h3 d-none d-sm-block d-lg-none d-xl-none d-xxl-none pt-1"> Find Your Hat</p>
-                            <p class="h1 d-none d-lg-block pt-2">Find Your Hat</p>
+                            <p class="h3 d-none d-md-block d-lg-none d-xl-none d-xxl-none pt-2"> Find Your Hat</p>
+                            <p class="h4 d-none d-sm-block d-md-none d-lg-none d-xl-none d-xxl-none pt-1"> Find Your Hat</p>
+                            <p class="h5 d-none d-sm-none d-md-none d-lg-none d-xl-block d-xxl-none pt-1"> Find Your Hat</p>
+                            <p class="h2 d-none d-lg-block d-xl-none pt-1">Find Your Hat</p>
                         </div>
                         <div class="col-2 pt-2 pb-0">
                             <img src="/images/find-the-hat/hat.png" class="w-100" alt="">
@@ -75,8 +77,8 @@
                                         <div class="triangle-left"></div>
                                     </td>
                                     <td>
-                                        <div class="triangle-up"></div>
-                                        <span> </span>
+                                        <div class="triangle-up align-center"></div>
+                                        <div class="p-1"></div>
                                         <div class="triangle-down"></div>
                                     </td>
                                     <td rowspan="2">
@@ -85,7 +87,6 @@
                                 </tr>
 
                             </table>
-                            controller buttons here
                         </div>
                     </div>
 
