--- a/index.html
+++ b/index.html
@@ -5,124 +5,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
+        integrity="sha384-4LISF5TTJX/fLmGSxO53rV4miRxdg84mZsxmO8Rx5jGtp/LbrixFETvWa5a6sESd" crossorigin="anonymous">
+    <script src="/js/bootstrap.min.js" defer></script>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-primary p-2 text-dark bg-opacity-50">
-        <div class="container-fluid container-1200">
-            <a class="navbar-brand" href="index.html">Joshua Ho Gwok Hin</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+<body class="bg-black main">
+    <nav class="navbar navbar-expand-lg bg-dark fixed-top p-2 text-info">
+        <div class="container-fluid">
+
+            <a class="navbar-brand text-info console-font" href="index.html">
+                <span class="text-white">&lt;/&gt;</span>
+                <span class="ms-3">Joshua Ho Gwok Hin</span>
+            </a>
+            <button class="navbar-toggler bg-info border-white" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon "></span>
             </button>
-            <div class="collapse navbar-collapse bg-info bg-opacity-20" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">JavaScript Game - Find the Hat</a>
+            <div class="collapse navbar-collapse bg-opacity-20" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item pt-1">
+                        <a class="nav-link active console-font text-info ms-3" aria-current="page" href="#"><span
+                                class="console-font text-secondary">01. </span>About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Frontend - Tutorials</a>
+                    <li class="nav-item pt-1">
+                        <a class="nav-link active console-font text-info ms-3" aria-current="page" href="#"><span
+                                class="console-font text-secondary">02. </span>Works</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
+                    <li class="nav-item pt-1">
+                        <a class="nav-link active console-font text-info ms-3" aria-current="page" href="#"><span
+                                class="console-font text-secondary">03. </span>Docs</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <li class="nav-item download-btn ms-3">
+                        <a class="nav-link active console-font text-info" aria-current="page" href="#">Resume</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container-fluid container-1200">
-
-        <div class="row">
-            <!-- <h5 class="mini-header text-center">JavaScript Game - Find your hat</h5> -->
-
-            <div class="col-sm-3 col-lg-4">
-                Technical Specifications
-            </div>
-            <div class="col-sm-6 col-lg-5 col-xl-4">
-                <div class="game-console-top">
-                    <div class="row px-2 py-0">
-                        <div class="col-2 pt-2 pb-0">
-                            <img src="/images/find-the-hat/paw-print.png" class="w-100" alt="">
-                        </div>
-                        <div class="col-8">
-                            <p class="h2 d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none pt-3 ">Find Your Hat</p>
-                            <p class="h3 d-none d-md-block d-lg-none d-xl-none d-xxl-none pt-2"> Find Your Hat</p>
-                            <p class="h4 d-none d-sm-block d-md-none d-lg-none d-xl-none d-xxl-none pt-1"> Find Your Hat</p>
-                            <p class="h5 d-none d-sm-none d-md-none d-lg-none d-xl-block d-xxl-none pt-1"> Find Your Hat</p>
-                            <p class="h2 d-none d-lg-block d-xl-none pt-1">Find Your Hat</p>
-                        </div>
-                        <div class="col-2 pt-2 pb-0">
-                            <img src="/images/find-the-hat/hat.png" class="w-100" alt="">
-                        </div>
-                    </div>
-                </div>
-
-                <div id="game-field">
-
-                    <div class="my-flex-container" id="print-elements"></div>
-
-                    <div class="container-fluid">
-                        <div class="row">
-                            <table class="controller-table">
-                                <tr>
-                                    <td rowspan="2">
-                                        <div class="triangle-left"></div>
-                                    </td>
-                                    <td>
-                                        <div class="triangle-up align-center"></div>
-                                        <div class="p-1"></div>
-                                        <div class="triangle-down"></div>
-                                    </td>
-                                    <td rowspan="2">
-                                        <div class="triangle-right"></div>
-                                    </td>
-                                </tr>
-
-                            </table>
-                        </div>
-                    </div>
-
-                </div>
-
-                <div class="game-console-bottom">
-                    <div class="row px-2 py-0">
-                        <div class="col-1 pb-2 pt-0">
-                            <img src="/images/find-the-hat/paw-print.png" class="w-100" alt="">
-                        </div>
-                        <div class="col-10">
-                            <button class="h5 d-sm-none d-md-none d-lg-none d-xl-none d-xxl-none pb-3 ">Reset
-                                Game</button>
-                            <button class="h6 d-none d-sm-block d-lg-none d-xl-none d-xxl-none pb-1">Reset Game</button>
-                            <button class="h4 d-none d-lg-block pb-2">Reset Game</button>
-                        </div>
-                        <div class="col-1 pb-2 pt-0">
-                            <img src="/images/find-the-hat/hat.png" class="w-100" alt="">
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col">
-                Game instructions
-            </div>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
+    <h1>hello</h1>
 
 
-            <div class="mini-footer"></div>
-        </div>
-    </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-    <script src="/js/find-the-hat.js"></script>
+    <footer class="bg-dark text-info">
+        Social Media &ThickSpace;
+        <i class="bi bi-linkedin"></i> &ThickSpace; &ThickSpace;
+        <i class="bi bi-github"></i> &ThickSpace; &ThickSpace;
+      <i class="bi bi-youtube"></i> &ThickSpace; &ThickSpace;
+    </footer>
+
 </body>
 
 </html>
