--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 
     <h1>hello</h1>
     <h1>hello</h1>
-    <h1>hello</h1>
+    <h1 class="text-secondary">Website is under construction... </h1>
+    <h2 class="text-secondary">Please come back later. Thank you</h2>
     <h1>hello</h1>
 
 
