Added Status Bar

--- a/index.html
+++ b/index.html
@@ -54,13 +54,29 @@
     <h2 class="text-secondary">Please come back later. Thank you</h2>
     <h1>hello</h1>
 
+    <footer>
+        <div class="status-bar">
+            <div>
+                Status:
+            </div>
+            <div class="margin-left-auto"> 
+                <span>UTF-8</span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-html"></i> HTML</span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-css"></i> CSS</span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-filetype-js"></i> JavaScript</span>&ThickSpace; &ThickSpace;
+                <span><i class="bi bi-bootstrap"></i> Bootstrap v5.3.2</span>
+            </div>
 
+        </div>
 
-    <footer class="bg-dark text-info">
-        Social Media &ThickSpace;
-        <i class="bi bi-linkedin"></i> &ThickSpace; &ThickSpace;
-        <i class="bi bi-github"></i> &ThickSpace; &ThickSpace;
-      <i class="bi bi-youtube"></i> &ThickSpace; &ThickSpace;
+        <div class="footer-bar">
+            <span class="text-secondary">Follow me on</span>&MediumSpace;
+            <span class="text-info">Social</span><span class="text-white">Media</span> &ThickSpace; &ThickSpace;
+            <i class="bi bi-linkedin"></i> &ThickSpace; &ThickSpace;
+            <i class="bi bi-github text-white"></i> &ThickSpace; &ThickSpace;
+            <i class="bi bi-youtube"></i> &ThickSpace; &ThickSpace;
+
+        </div>
     </footer>
 
 </body>
