Added link paths and update design

--- a/index.html
+++ b/index.html
@@ -14,43 +14,47 @@
 </head>
 
 <body class="bg-black main">
-    <nav class="navbar navbar-expand-lg bg-dark fixed-top p-2 text-info">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top p-2" data-bs-theme="dark">
         <div class="container-fluid">
 
-            <a id="title-logo-text" class="navbar-brand text-info console-font" href="index.html">
+            <a id="title-logo-text" class="navbar-brand text-info" href="index.html">
                 <span class="logo-bold">&lt;/&gt;</span>
-                <span class="ms-3 justify-content-center">Joshua Ho Gwok Hin</span>
+                <span class=" justify-content-center">Joshua Ho Gwok Hin</span>
             </a>
-            <button class="navbar-toggler bg-warning border-white" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon "></span>
             </button>
             <div class="collapse navbar-collapse bg-opacity-20" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item pt-1">
-                        <a id="about" class="nav-link active console-font text-info ms-3" aria-current="page"
-                            href="#about"><span class="console-font grey-font">01. </span>About</a>
+                        <a id="about" class="nav-link active nav-link-text ms-3" aria-current="page" href="#about">
+                            <span class="grey-font">01. </span>About</a>
                     </li>
                     <li class="nav-item pt-1">
-                        <a id="works" class="nav-link active console-font text-info ms-3" aria-current="page" href="#works"><span
-                                class="console-font grey-font">02. </span>Works</a>
+                        <a id="works" class="nav-link active nav-link-text ms-3" aria-current="page" href="#works"><span
+                                class="grey-font">02. </span>Works</a>
                     </li>
                     <li class="nav-item pt-1">
-                        <a id="docs" class="nav-link active console-font text-info ms-3" aria-current="page"
-                            href="#documentation"><span class="console-font grey-font">03. </span>Docs</a>
+                        <a id="docs" class="nav-link active nav-link-text ms-3" aria-current="page"
+                            href="#documentation"><span class="grey-font">03. </span>Docs</a>
                     </li>
                     <li class="nav-item pt-1">
-                        <a id="misc" class="nav-link active console-font text-info ms-3" aria-current="page"
-                            href="#miscellaneous"><span class="console-font grey-font">04. </span>Misc</a>
+                        <a id="misc" class="nav-link active nav-link-text ms-3" aria-current="page"
+                            href="#miscellaneous"><span class="grey-font">04. </span>Misc</a>
                     </li>
                     <li class="nav-item download-btn ms-3">
-                        <a class="nav-link active console-font text-info" aria-current="page" href="#">Resume</a>
+                        <a class="nav-link active nav-link-text ps-lg-2" aria-current="page" href="/resource/resume/Joshua Ho Gwok Hin.pdf" download>Resume <span
+                                class="d-md-inline-block d-lg-none "><i class="bi bi-file-pdf"></i> Download</span></a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
+    <div class="page-content">
+
+    </div>
 
     <h1>hello</h1>
     <h1>hello</h1>
@@ -60,8 +64,8 @@
 
     <footer>
         <div class="row status-bar">
-            <div class="col-2 d-none d-sm-block">
-                Status:
+            <div class="col-3 d-none d-sm-block">
+                Status: 🟢 200 OK
             </div>
             <div class="col d-flex justify-content-center justify-content-sm-end">
                 <span class="">UTF-8</span>&ThickSpace; &ThickSpace;
@@ -76,9 +80,12 @@
         <div class="footer-bar d-flex justify-content-center justify-content-md-start">
             <span class="text-secondary">Follow me on</span>&MediumSpace;
             <span class="text-info">Social</span><span class="text-white">Media</span> &ThickSpace; &ThickSpace;
-            <i class="bi bi-linkedin"></i> &ThickSpace; &ThickSpace;
-            <i class="bi bi-github text-white"></i> &ThickSpace; &ThickSpace;
-            <i class="bi bi-youtube"></i> &ThickSpace; &ThickSpace;
+            <a href="https://www.linkedin.com/in/joshua-ho-gwok-hin/" target="_blank"><i class="bi bi-linkedin"></i></a> &ThickSpace; &ThickSpace;
+            <a href="https://github.com/Joshua-Ho-Gwok-Hin" target="_blank"><i class="bi bi-github"></i></a> &ThickSpace; &ThickSpace;
+            <a href="https://youtu.be/pnlO8fFPyEA?si=kDE6bgdh2KDCQvll" target="_blank"><i class="bi bi-youtube"></i></a> &ThickSpace; &ThickSpace;
+            <a href="https://soundcloud.com/joshua-ho-gwok-hin" target="_blank"><i class="bi bi-music-note-beamed"></i></a> &ThickSpace; &ThickSpace;
+
+
         </div>
     </footer>
 
