--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
                             href="#miscellaneous"><span class="grey-font">04. </span>Misc</a>
                     </li>
                     <li class="nav-item download-btn ms-3">
-                        <a class="nav-link active nav-link-text ps-lg-2" aria-current="page" href="/resource/resume/Joshua Ho Gwok Hin.pdf" download>Resume <span
+                        <a class="nav-link active nav-link-text ps-lg-2" aria-current="page"
+                            href="/resource/resume/Joshua Ho Gwok Hin.pdf" download>Resume <span
                                 class="d-md-inline-block d-lg-none "><i class="bi bi-file-pdf"></i> Download</span></a>
                     </li>
                 </ul>
@@ -52,15 +53,33 @@
         </div>
     </nav>
 
-    <div class="page-content">
+    <section class="page-content">
 
-    </div>
+        <div class="row">
+            <div class="col-3 border-right">
+                <h1>hello</h1>
+                <ul>
+                    <li>one</li>
+                    <li>two</li>
+                    <li>three</li>
+                    <li>four</li>
+                    <li>five</li>
+                </ul>
+                
+            </div>
+            <div class="col">
+                <h1 class="text-secondary">Website is under construction... </h1>
+                <h2 class="text-secondary">Please come back later. Thank you</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime quam! Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum voluptate mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos possimus sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate aperiam libero maxime quam! Commodi nemo, deleniti doloribus rem itaque incidunt adipisci explicabo impedit, ipsum voluptate mollitia dolore placeat excepturi totam. Magni hic, ex provident, cupiditate commodi eos possimus sequi, aliquid incidunt autem facilis? Quia vero deleniti tempore? Commodi, modi veniam?</p>
+            </div>
 
-    <h1>hello</h1>
-    <h1>hello</h1>
-    <h1 class="text-secondary">Website is under construction... </h1>
-    <h2 class="text-secondary">Please come back later. Thank you</h2>
-    <h1>hello</h1>
+
+        </div>
+
+    </section>
+
+
 
     <footer>
         <div class="row status-bar">
@@ -78,14 +97,16 @@
         </div>
 
         <div class="footer-bar d-flex justify-content-center justify-content-md-start">
-            <span class="text-secondary">Follow me on</span>&MediumSpace;
+            <span class="grey-font">Follow me on</span>&MediumSpace;
             <span class="text-info">Social</span><span class="text-white">Media</span> &ThickSpace; &ThickSpace;
-            <a href="https://www.linkedin.com/in/joshua-ho-gwok-hin/" target="_blank"><i class="bi bi-linkedin"></i></a> &ThickSpace; &ThickSpace;
-            <a href="https://github.com/Joshua-Ho-Gwok-Hin" target="_blank"><i class="bi bi-github"></i></a> &ThickSpace; &ThickSpace;
-            <a href="https://youtu.be/pnlO8fFPyEA?si=kDE6bgdh2KDCQvll" target="_blank"><i class="bi bi-youtube"></i></a> &ThickSpace; &ThickSpace;
-            <a href="https://soundcloud.com/joshua-ho-gwok-hin" target="_blank"><i class="bi bi-music-note-beamed"></i></a> &ThickSpace; &ThickSpace;
-
-
+            <a href="https://www.linkedin.com/in/joshua-ho-gwok-hin/" target="_blank"><i class="bi bi-linkedin"></i></a>
+            &ThickSpace; &ThickSpace;
+            <a href="https://github.com/Joshua-Ho-Gwok-Hin" target="_blank"><i class="bi bi-github"></i></a>
+            &ThickSpace; &ThickSpace;
+            <a href="https://youtu.be/pnlO8fFPyEA?si=kDE6bgdh2KDCQvll" target="_blank"><i class="bi bi-youtube"></i></a>
+            &ThickSpace; &ThickSpace;
+            <a href="https://soundcloud.com/joshua-ho-gwok-hin" target="_blank"><i
+                    class="bi bi-music-note-beamed"></i></a> &ThickSpace; &ThickSpace;
         </div>
     </footer>
 
